# pyairnow

./: .gitignore  AUTHORS.md  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  tox.ini
.github/workflows/: ci.yaml  publish.yaml
examples/: __init__.py  cli.py
pyairnow/: __init__.py  api.py  conv.py  errors.py  forecast.py  historical.py  observation.py
tests/: conftest.py  mock_api.py  test_10_api.py  test_11_errors.py  test_12_forecast.py  test_13_observations.py  test_14_conversions.py  test_15_historical.py
