[build-system]
requires = ["setuptools >= 35.0.2", "wheel >= 0.29.0", "poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyairnow"
version = "1.2.0"
description = "A lightweight Python wrapper for EPA AirNow Air Quality API"
readme = "README.md"
authors = ["Jonathan Krauss <jkrauss@asymworks.com>"]
license = "MIT"
repository = "https://github.com/asymworks/pyairnow"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
aiohttp = "^3.6.2"
python = "^3.8,<3.11"

[tool.poetry.dev-dependencies]
aioresponses = "^0.7.0"
coverage = "^5.2.1"
flake8 = "^3.8.3"
pytest = "^6.0.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.10.1"
