[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyairnow"
version = "1.3.1"
description = "A lightweight Python wrapper for EPA AirNow Air Quality API"
readme = "README.md"
authors = ["Jonathan Krauss <jkrauss@asymworks.com>"]
license = "MIT"
repository = "https://github.com/asymworks/pyairnow"
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Atmospheric Science",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]

[tool.poetry.dependencies]
aiohttp = "^3.10.0"
python = "^3.9"

[tool.poetry.group.dev.dependencies]
aioresponses = "^0.7.8"
coverage = "^5.5"
flake8 = "^5.0.0"
pytest = "^6.2.5"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.12.1"

[tool.setuptools.package-data]
"pyairnow" = ["py.typed"]

[tool.setuptools.packages.find]
where = ["pyairnow"]

[tool.poetry.requires-plugins]
poetry-plugin-export = ">=1.8"
